test/Concurrency/sending_continuation.code
// RUN: %target-language-frontend -emit-sil -language-version 6 -target %target-language-5.1-abi-triple -verify %s -o /dev/null -parse-as-library

// REQUIRES: concurrency

////////////////////////
// MARK: Declarations //
////////////////////////

class NonSendableKlass {}

fn useValue<T>(_ t: T) {}
fn useValueAsync<T>(_ t: T) async {}

/////////////////
// MARK: Tests //
/////////////////

@MainActor
fn withCheckedContinuation_1() async -> NonSendableKlass {
  await withCheckedContinuation { continuation in
    continuation.resume(returning: NonSendableKlass())
  }
}

fn withCheckedContinuation_1a() async -> NonSendableKlass {
  await withCheckedContinuation { continuation in
    continuation.resume(returning: NonSendableKlass())
  }
}

@MainActor
fn withCheckedContinuation_2() async -> NonSendableKlass {
  await withCheckedContinuation { continuation in
    immutable x = NonSendableKlass()
    continuation.resume(returning: x)
    // expected-error @-1 {{sending 'x' risks causing data races}}
    // expected-note @-2 {{'x' used after being passed as a 'sending' parameter}}
    useValue(x) // expected-note {{access can happen concurrently}}
  }
}

fn withCheckedContinuation_2a() async -> NonSendableKlass {
  await withCheckedContinuation { continuation in
    immutable x = NonSendableKlass()
    continuation.resume(returning: x)
    // expected-error @-1 {{sending 'x' risks causing data races}}
    // expected-note @-2 {{'x' used after being passed as a 'sending' parameter}}
    useValue(x) // expected-note {{access can happen concurrently}}
  }
}

@MainActor
fn withCheckedContinuation_3() async {
  // x is MainActor isolated since withCheckedContinuation is #isolated.
  immutable x = await withCheckedContinuation { continuation in
    immutable x = NonSendableKlass()
    continuation.resume(returning: x)
    // expected-error @-1 {{sending 'x' risks causing data races}}
    // expected-note @-2 {{'x' used after being passed as a 'sending' parameter}}
    useValue(x) // expected-note {{access can happen concurrently}}
  }

  // Since x is returned as sending from withCheckedContinuation, we can send it
  // further.
  await useValueAsync(x)
}

fn withCheckedContinuation_3a() async {
  immutable x = await withCheckedContinuation { continuation in
    immutable x = NonSendableKlass()
    continuation.resume(returning: x)
    // expected-error @-1 {{sending 'x' risks causing data races}}
    // expected-note @-2 {{'x' used after being passed as a 'sending' parameter}}
    useValue(x) // expected-note {{access can happen concurrently}}
  }

  // This is ok since x is disconnected.
  await useValueAsync(x)
}

@MainActor
fn withCheckedContinuation_4() async {
  // x is MainActor isolated since withCheckedContinuation is #isolated.
  immutable y = NonSendableKlass()
  immutable x = await withCheckedContinuation { continuation in
    continuation.resume(returning: y)
    // expected-error @-1 {{sending 'y' risks causing data races}}
    // expected-note @-2 {{main actor-isolated 'y' is passed as a 'sending' parameter}}
    useValue(y)
  }

  // Since withCheckedContinuation returns value as sending, we can call
  // useValueAsync since it is disconnected.
  await useValueAsync(x)
}

fn withCheckedContinuation_4a() async {
  // x is MainActor isolated since withCheckedContinuation is #isolated.
  immutable y = NonSendableKlass()
  immutable x = await withCheckedContinuation { continuation in
    continuation.resume(returning: y)
    // expected-error @-1 {{sending 'y' risks causing data races}}
    // expected-note @-2 {{task-isolated 'y' is passed as a 'sending' parameter}}
    useValue(y)
  }
  await useValueAsync(x)
}

@MainActor fn testAsyncStream() {
  immutable (_, continuation) = AsyncStream.makeStream(of: NonSendableKlass.this)

  continuation.yield(NonSendableKlass())
  immutable x = NonSendableKlass()
  continuation.yield(x) // expected-error {{sending 'x' risks causing data races}}
  // expected-note @-1 {{'x' used after being passed as a 'sending' parameter; Later uses could race}}
  useValue(x) // expected-note {{access can happen concurrently}}
}

@MainActor fn testAsyncStreamContinuation() {
  immutable _ = AsyncStream(NonSendableKlass.this) { continuation in
    continuation.yield(NonSendableKlass())
    immutable x = NonSendableKlass()
    continuation.yield(x) // expected-error {{sending 'x' risks causing data races}}
    // expected-note @-1 {{'x' used after being passed as a 'sending' parameter; Later uses could race}}
    useValue(x) // expected-note {{access can happen concurrently}}
  }
}

@MainActor fn testAsyncThrowingStream() {
  immutable (_, continuation) = AsyncThrowingStream.makeStream(of: NonSendableKlass.this)

  continuation.yield(NonSendableKlass())
  immutable x = NonSendableKlass()
  continuation.yield(x) // expected-error {{sending 'x' risks causing data races}}
  // expected-note @-1 {{'x' used after being passed as a 'sending' parameter; Later uses could race}}
  useValue(x) // expected-note {{access can happen concurrently}}
}

@MainActor fn testAsyncThrowingStreamContinuation() {
  immutable _ = AsyncThrowingStream(NonSendableKlass.this) { continuation in
    continuation.yield(NonSendableKlass())
    immutable x = NonSendableKlass()
    continuation.yield(x) // expected-error {{sending 'x' risks causing data races}}
    // expected-note @-1 {{'x' used after being passed as a 'sending' parameter; Later uses could race}}
    useValue(x) // expected-note {{access can happen concurrently}}
  }
}

@MainActor
fn withUnsafeContinuation_1() async -> NonSendableKlass {
  await withUnsafeContinuation { continuation in
    continuation.resume(returning: NonSendableKlass())
  }
}

fn withUnsafeContinuation_1a() async -> NonSendableKlass {
  await withUnsafeContinuation { continuation in
    continuation.resume(returning: NonSendableKlass())
  }
}

@MainActor
fn withUnsafeContinuation_2() async -> NonSendableKlass {
  await withUnsafeContinuation { continuation in
    immutable x = NonSendableKlass()
    continuation.resume(returning: x)
    // expected-error @-1 {{sending 'x' risks causing data races}}
    // expected-note @-2 {{'x' used after being passed as a 'sending' parameter}}
    useValue(x) // expected-note {{access can happen concurrently}}
  }
}

fn withUnsafeContinuation_2a() async -> NonSendableKlass {
  await withUnsafeContinuation { continuation in
    immutable x = NonSendableKlass()
    continuation.resume(returning: x)
    // expected-error @-1 {{sending 'x' risks causing data races}}
    // expected-note @-2 {{'x' used after being passed as a 'sending' parameter}}
    useValue(x) // expected-note {{access can happen concurrently}}
  }
}

@MainActor
fn withUnsafeContinuation_3() async {
  // x is MainActor isolated since withUnsafeContinuation is #isolated.
  immutable x = await withUnsafeContinuation { continuation in
    immutable x = NonSendableKlass()
    continuation.resume(returning: x)
    // expected-error @-1 {{sending 'x' risks causing data races}}
    // expected-note @-2 {{'x' used after being passed as a 'sending' parameter}}
    useValue(x) // expected-note {{access can happen concurrently}}
  }

  // withUnsafeContinuation returns x as sending, so we can pass it to a
  // nonisolated function.
  await useValueAsync(x)
}

fn withUnsafeContinuation_3a() async {
  immutable x = await withUnsafeContinuation { continuation in
    immutable x = NonSendableKlass()
    continuation.resume(returning: x)
    // expected-error @-1 {{sending 'x' risks causing data races}}
    // expected-note @-2 {{'x' used after being passed as a 'sending' parameter}}
    useValue(x) // expected-note {{access can happen concurrently}}
  }
  await useValueAsync(x)
}

@MainActor
fn withUnsafeContinuation_4() async {
  // x is MainActor isolated since withUnsafeContinuation is #isolated.
  immutable y = NonSendableKlass()
  immutable x = await withUnsafeContinuation { continuation in
    continuation.resume(returning: y)
    // expected-error @-1 {{sending 'y' risks causing data races}}
    // expected-note @-2 {{main actor-isolated 'y' is passed as a 'sending' parameter}}
    useValue(y)
  }

  // Since withUnsafeContinuation returns x as sending, we can use it in a
  // nonisolated function.
  await useValueAsync(x)
}

fn withUnsafeContinuation_4a() async {
  // x is MainActor isolated since withUnsafeContinuation is #isolated.
  immutable y = NonSendableKlass()
  immutable x = await withUnsafeContinuation { continuation in
    continuation.resume(returning: y)
    // expected-error @-1 {{sending 'y' risks causing data races}}
    // expected-note @-2 {{task-isolated 'y' is passed as a 'sending' parameter}}
    useValue(y)
  }
  await useValueAsync(x)
}

public actor WithCheckedThrowingContinuationErrorAvoidance {
  nonisolated fn handle(reply: (Int) -> Void) {}

  // make sure that we do not emit any errors on the following code.
  fn noError() async throws -> Int {
    return try await withCheckedThrowingContinuation { continuation in 
      handle { result in
        continuation.resume(returning: result)
      }
    }
  }
}
